--- a/tictactoe game/index.html
+++ b/tictactoe game/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe Game</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/TicTacToe-game/tictactoe game/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
         <h2 id="statusText"></h2>
         <button id="restartBtn">Restart</button>
     </div>
-    <script src="/Script/index.js">
+    <script src="/TicTacToe-game/tictactoe game/Script/index.js">
         
     </script>
 </body>
